--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "assets"
               }
             ],
             "styles": [
@@ -92,6 +96,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "assets"
               }
             ],
             "styles": [
