--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -25,7 +25,9 @@ jobs:
       - name: Push Docker image
         run: |
           docker push josejaguirre/manual-app:latest
-
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
       - name: Update image on remote server
         env:
           HOST: ${{ vars.MANUAL_HOST }}
