--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,25 @@
-server{
+worker_processes 1;
+
+events {
+  worker_connections 1024;
+}
+
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
+
+  server {
     listen 80;
-    listen [::] 80;
+    listen [::]:80;
     server_name _;
-    root /var/www/example.com;
+
+    root /usr/share/nginx/html;
     index index.html;
 
     location / {
-        try_files $uri$args $uri$args/ /index.html;
+      try_files $uri$args $uri$args/ /index.html;
     }
+
+    error_page 404 /index.html;
+  }
 }
